[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
futures-util = "0.3"
protocol = { version = "0.1", path = "../protocol" }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.tokio]
version = "1.34"
features = [
    "rt-multi-thread",
    "net",
    "macros",
    "sync",
    "signal",
    "parking_lot",
]
