[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "tokio/rt-multi-thread",
    "tokio/net",
    "tokio/macros",
    "tokio/sync",
    "tokio/parking_lot",
]
shuttle = [
    "shuttle-axum",
    "shuttle-runtime",
    "tokio/rt-multi-thread",
    "tokio/macros",
]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
protocol = { version = "0.1", path = "../protocol" }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Both `std` and `shuttle` features depend on it but with different futures from it.
[dependencies.tokio]
version = "1.34"
default-features = false
optional = true

# Feature `shuttle` depend on it.
[dependencies.shuttle-axum]
version = "0.34"
default-features = false
features = ["axum-0-7"]
optional = true

# Feature `shuttle` depend on it.
[dependencies.shuttle-runtime]
version = "0.35"
default-features = false
optional = true
