[package]
name = "peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-console = "0.3"
gloo-dialogs = "0.2"
gloo-events = "0.2"
gloo-net = "0.5"
gloo-utils = "0.2"
js-sys = "0.3"
protocol = { version = "0.1", path = "../protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlButtonElement",
    "HtmlMediaElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "Navigator",
    "RtcConfiguration",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "DisplayMediaStreamConstraints",
    "MediaStream",
    "MediaStreamTrack",
    "RtcRtpSender",
    "RtcIceConnectionState",
    "RtcTrackEvent",
    "RtcIceCandidateInit",
]
